cluster/apps/traefik/traefik/ingress/whoami/middleware.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/middleware_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/middlewares/overview/
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: whoami
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/middleware_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/middlewares/overview/
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-cache-headers
  namespace: whoami
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "no-store, no-cache, must-revalidate"
