cluster/apps/traefik/traefik/ingress/whoami/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-https
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    external-dns.kubernetes.io/hostname: whoami.lan.${EXTERNAL_DOMAIN}
    external-dns.kubernetes.io/target: ${TRAEFIK_IP4}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: lan-ip-whitelist
        - name: compress
      services:
        - name: whoami
          namespace: whoami
          passHostHeader: true
          port: 80
  tls:
    secretName: "whoami-lan-${EXTERNAL_DOMAIN/./-}-tls"
